@@ -9,11 +9,11 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-
 import java.util.Arrays;
 import java.util.List;
 
-@SpringBootApplication(exclude = {SecurityAutoConfiguration.class})
+// @SpringBootApplication//(exclude = {SecurityAutoConfiguration.class})
+@SpringBootApplication // (exclude = {SecurityAutoConfiguration.class})
 public class BackendApplication {
 
     private static final int STRENGTH = 12;
@@ -23,8 +23,8 @@ public class BackendApplication {
     }
 
     @Bean
-    public BCryptPasswordEncoder passwordEncoder(){
-    return new BCryptPasswordEncoder(STRENGTH);
+    public BCryptPasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder(STRENGTH);
     }
 
     @Bean
@@ -32,13 +32,16 @@ public class BackendApplication {
         UrlBasedCorsConfigurationSource urlBasedCorsConfigurationSource = new UrlBasedCorsConfigurationSource();
         CorsConfiguration corsConfiguration = new CorsConfiguration();
         corsConfiguration.setAllowCredentials(true);
-        corsConfiguration.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:3000", "http://securecapita.org"));
-        //corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
+        corsConfiguration.setAllowedOrigins(
+                List.of("http://localhost:4200", "http://localhost:3000", "http://securecapita.org"));
+        // corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
         corsConfiguration.setAllowedHeaders(Arrays.asList("Origin", "Access-Control-Allow-Origin", "Content-Type",
                 "Accept", "Jwt-Token", "Authorization", "Origin", "Accept", "X-Requested-With",
                 "Access-Control-Request-Method", "Access-Control-Request-Headers"));
-        corsConfiguration.setExposedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Jwt-Token", "Authorization",
-                "Access-Control-Allow-Origin", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials", "File-Name"));
+        corsConfiguration
+                .setExposedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Jwt-Token", "Authorization",
+                        "Access-Control-Allow-Origin", "Access-Control-Allow-Origin",
+                        "Access-Control-Allow-Credentials", "File-Name"));
         corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         urlBasedCorsConfigurationSource.registerCorsConfiguration("/**", corsConfiguration);
         return new CorsFilter();
